fix(minifront): bg-color, connection issues and SegmentPicker z-index

--- a/packages/ui-deprecated/styles/globals.css
+++ b/packages/ui-deprecated/styles/globals.css
@@ -5,7 +5,7 @@
 @layer base {
   :root {
     /* black bg */
-    --background: 0, 0%, 5%;
+    --background: 0, 0%, 0%;
     --foreground: 0, 4%, 73%;
 
     /* white text */
